--- a/index.html
+++ b/index.html
@@ -3,12 +3,60 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>LiseLig</title>
+    <link rel="stylesheet" href="style.css">
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600&display=swap" rel="stylesheet">
 </head>
 <body>
-    
-    <h1>Hi, we're liselig!</h1>
-    <p> <a href="second.html">second page</a></p>
+    <header>
+        <img id="logo1" src="flying_ball.png" alt="Logo">
+        <h1>LiseLig</h1>
+        <nav>
+            <ul>
+                <li><a href="fixtures.html" class="nav-link">Fikstür</a></li>
+                <li><a href="results.html" class="nav-link">Sonuçlar</a></li>
+                <li><a href="teams.html" class="nav-link">Takım Kadroları</a></li>
+            </ul>
+        </nav>
+    </header>
+
+    <img id="ataturk" src="ataturk.png" alt="Atatürk">
+
+    <div class="gallery">
+        <img src="photo1.jpg" alt="Photo 1">
+        <img src="photo2.jpg" alt="Photo 2">
+        <img src="photo3.jpg" alt="Photo 3">
+        <!-- Add more photos -->
+    </div>
+
+    <section id="fixtures">
+        <h2>Fikstür</h2>
+        <!-- Add fixtures here -->
+    </section>
+
+    <section id="results">
+        <h2>Sonuçlar</h2>
+        <!-- Add results here -->
+    </section>
+
+    <section id="teams">
+        <h2>Takım Kadroları</h2>
+        <!-- Add team information here -->
+    </section>
+
+    <section id="other">
+        <h2>Diğer</h2>
+        <!-- Add team information here -->
+    </section>
+
+    <footer>
+        <p>&copy; Liselig</p>
+        <div class="social-links">
+            <a href="your-facebook-link" target="_blank">Facebook</a> |
+            <a href="your-twitter-link" target="_blank">Twitter</a> |
+            <a href="your-instagram-link" target="_blank">Instagram</a>
+        </div>
+    </footer>
     
 </body>
 </html>
